# rules_gqlgen

./: BUILD.bazel  deps.bzl  go.mod  go.sum
example/: BUILD.bazel  WORKSPACE  deps.bzl  go.mod
example/src/: BUILD.bazel  main.go
