load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Silicon-Ally/rules_gqlgen/example
# gazelle:resolve go github.com/Silicon-Ally/rules_gqlgen/example/src/generated //src:gql_generated
# gazelle:resolve go github.com/Silicon-Ally/rules_gqlgen/example/src/model //src:gql_model
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

exports_files([
    "go.mod",
    "go.sum",
])
